<resources>
    <string name="app_name">Chargeback UI</string>
    <string name="choose_a_service">Choose a service</string>
    <string name="save">Save</string>
    <string name="create_subscription">Create Subscription</string>
    <string name="start_date">Start Date</string>
    <string name="name">Name</string>
    <string name="apr_12_2025">Apr 12, 2025</string>
    <string name="active">Active</string>
    <string name="frequency">Frequency</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="temp_0_dollar">$0</string>
    <string name="weekly">Weekly</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="netflix">Netflix</string>
    <string name="services">Services</string>
</resources>